--- a/templates/terms_data_collection.html
+++ b/templates/terms_data_collection.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7F1WP8JXBL"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S0PLJXQPQB"></script>
     <script>
         // ✅ PARAMETER PRESERVATION FUNCTIONS
         function getL1AttributionUrl(l1Path) {
@@ -40,7 +40,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-7F1WP8JXBL', {
+        gtag('config', 'G-S0PLJXQPQB', {
             page_location: getL1AttributionUrl('/terms/data-collection'),
             page_title: 'Data Collection Policy - Jobs Next Door'
         });
