--- a/templates/terms.html
+++ b/templates/terms.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <!-- ✅ Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7F1WP8JXBL"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S0PLJXQPQB"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-7F1WP8JXBL');
+      gtag('config', 'G-S0PLJXQPQB');
     </script>
 
     <meta charset="UTF-8">
