--- a/templates/terms_recruitment.html
+++ b/templates/terms_recruitment.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <!-- Google Analytics 4 -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7F1WP8JXBL"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S0PLJXQPQB"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){ dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'G-7F1WP8JXBL', {
+    gtag('config', 'G-S0PLJXQPQB', {
       page_location: 'https://velvelt.onrender.com/terms/recruitment',
       page_title: 'Recruitment Process Terms - Jobs Next Door'
     });
